[tool.poetry]
name = "archive-file-urls"
version = "1.1.0"
description = "Submit URLs listed inside a file to website archival services"
authors = ["Quoorex <46283604+Quoorex@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Quoorex/archive-file-urls"
keywords = ["Archiving"]

[tool.poetry.scripts]
archive-file-urls = 'archive_file_urls.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
archivenow = "^2020.7.18"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
